WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
86977
[V8] Pass Isolate to throwError()s in bindings/v8/*.{h,cpp}
https://bugs.webkit.org/show_bug.cgi?id=86977
Summary
[V8] Pass Isolate to throwError()s in bindings/v8/*.{h,cpp}
Kentaro Hara
Reported
2012-05-20 18:30:43 PDT
The objective is to pass Isolate around in V8 bindings. In this bug we pass Isolate to throwError()s in bindings/v8/*.{h,cpp} except for a couple of non-trivial cases. I'll upload a follow-up patch for the non-trivial cases.
Attachments
Patch
(8.41 KB, patch)
2012-05-20 18:34 PDT
,
Kentaro Hara
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kentaro Hara
Comment 1
2012-05-20 18:34:37 PDT
Created
attachment 142932
[details]
Patch
WebKit Review Bot
Comment 2
2012-05-20 22:41:43 PDT
Comment on
attachment 142932
[details]
Patch Clearing flags on attachment: 142932 Committed
r117728
: <
http://trac.webkit.org/changeset/117728
>
WebKit Review Bot
Comment 3
2012-05-20 22:41:47 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug