[V8] Pass Isolate to throwError()s in bindings/v8/*.{h,cpp} https://bugs.webkit.org/show_bug.cgi?id=86977

Reviewed by Adam Barth.

The objective is to pass Isolate around in V8 bindings.
This patch passes Isolate to throwError()s in bindings/v8/*.{h,cpp}
except for a couple of non-trivial cases. I'll upload a follow-up patch
for the non-trivial cases.

No tests. No change in behavior.

* bindings/v8/DateExtension.cpp:
(WebCore::DateExtension::OnSleepDetected):
* bindings/v8/SerializedScriptValue.cpp:
(WebCore::SerializedScriptValue::transferArrayBuffers):
(WebCore::SerializedScriptValue::SerializedScriptValue):
* bindings/v8/SerializedScriptValue.h:
* bindings/v8/V8NPObject.cpp:
(WebCore::npObjectInvokeImpl):
(WebCore::npObjectPropertyEnumerator):
* bindings/v8/V8Proxy.cpp:
(WebCore::V8Proxy::checkNewLegal):


Canonical link: https://commits.webkit.org/104627@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@117728 268f45cc-cd09-0410-ab3c-d52691b4dbfc