Source/WebCore/bindings/v8/DateExtension.cpp
@@ -116,9 +116,9 @@ v8::Handle<v8::Value> DateExtension::Setup(const v8::Arguments& args)
     return v8::Undefined();
 }
 
-v8::Handle<v8::Value> DateExtension::OnSleepDetected(const v8::Arguments&)
+v8::Handle<v8::Value> DateExtension::OnSleepDetected(const v8::Arguments& args)
 {
-    V8Proxy::throwError(V8Proxy::GeneralError, "Too much time spent in unload handler.");
+    V8Proxy::throwError(V8Proxy::GeneralError, "Too much time spent in unload handler.", args.GetIsolate());
     return v8::Undefined();
 }
 
